# lmc

./: .gitignore  LICENSE  README  README.md  ffcv_convert_datasets.py  main.py  pyproject.toml  requirements.txt  train.py
lmc/: config.py  experiment_config.py  experiment_manager.py  runners.py
lmc/butterfly/: butterfly.py
lmc/configs/: data_stats.py
lmc/data/: __init__.py  cifar10split.py  cinic10.py  data_stats.py  dataset.py  gsm8k.py  imagenet.py  instruction_format.yaml  math_datasets.py  nlp_data_stats.py  random_labels.py  tinyimagenet.py  utils.py  vision_data_stats.py
lmc/experiment/: __init__.py  base.py  finetune.py  logreg.py  perturb.py  train.py
lmc/logging/: __init__.py  plot.py  plot_utils.py  report_utils.py  wandb_registry.py  wandb_utils.py
lmc/models/: __init__.py  base_model.py  bert.py  layers.py  mlp.py  olmo.py  resnet.py  roberta.py  segformer.py  t5.py  type_declaration.py  utils.py  vit.py
lmc/permutations/: __init__.py  activation_alignment.py  alignment.py  alignment_methods.py  perm_stability.py  perm_stats.py  utils.py  weight_alignment.py
lmc/utils/: cka.py  lmc_utils.py  metrics.py  opt.py  permutations.py  permutations_entropy.py  run.py  seeds.py  setup_training.py  step.py  training_element.py  utils.py
notebooks/: butterfly-hparams.ipynb  butterfly-plots.ipynb  dataloader.ipynb  lora.ipynb  lora_analysis.py  perms.ipynb  report.ipynb  stability-distance.ipynb
scripts/: butterfly.sh  butterfly_batch_new_sampling.sh  cleanup_wandb_runs.py  setup-slurm.sh  test_deterministic.sh
scripts/butterfly/: butterfly.sh  butterfly_batch_new_sampling.sh  not_perturb_some.sh
scripts/epsilon_search_strategy/: epsilon_search_strategy.sh  epsilon_search_strategy_single.sh
scripts/finetune/: finetune_cifar10_from_cifar100.sh  finetune_glue.sh  perturb_cifar10_from_cifar100.sh  submit_all_glue_tasks.sh
scripts/hparam_search/: hparam_search.sh
scripts/logreg_search/: logreg_search.sh  logreg_search_single.sh
scripts/lyapunov_exponent/: lyapunov_exponent.sh  lyapunov_exponent_single.sh
scripts/olmo/: finetune_olmo.sh
scripts/pretrain-stability/: multibert-all-jobs.sh  submit_all_cifar10-100_stability.sh  submit_all_cifar100-10_stability.sh  submit_all_multiberts.sh  train-cifar10-from-cifar100.sh  train-cifar100-from-cifar10.sh  train-cifar100-from-imagenet-vit.sh  train-multibert.sh  vit-all-jobs.sh
scripts/small_butterfly/: small_butterfly.sh  small_butterfly_single.sh
scripts/train/: train_bert.sh  (+4 more)
tests/: base.py  data_batch.npz  perturb.yaml  resnet_perms.py  test_bert.py  test_cka.py  test_config.py  test_config_from_yaml.py  test_data_transforms.py  test_dataloaders.py  test_deterministic.py  test_experiments.py  test_ffcv.py  test_logreg.py  test_model_init.py  test_noise.py  test_noise_scale.py  test_olmo.py  test_permutations.py  test_roberta.py  test_segformer.py  test_training.py  test_vit.py  test_wandb_metrics.py  visually_validate_dataloader_transforms.ipynb
(+14 files in other folders)
