[tool.poetry]
name = "lmc"
version = "0.1.0"
description = ""
authors = ["Gül Sena Altıntaş <30217912+gsaltintas@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
torch = "2.0.1"
torchvision = "^0.19.0"
matplotlib = "3.7.2"
rich = "^13.8.0"
wandb = "0.15.2"
opencv-python = "4.5.4.58"
numpy = "^2.1.0"
seaborn = "^0.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
