[tool.poetry]
name = "lmc"
version = "0.1.0"
description = ""
authors = ["Gül Sena Altıntaş <30217912+gsaltintas@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "2.0.1"
torchvision = "0.15.2"
matplotlib = "3.7.2"
rich = "^13.8.0"
wandb = "0.15.2"
opencv-python = "^4.8.0"  # Updated from 4.5.4.58
numpy = "1.24.3"
seaborn = "^0.13.2"
ipykernel = "^6.29.5"
jupyter = "^1.1.1"
# huggingface
transformers = "^4.46.2"
peft = "^0.13.2"
datasets = "^3.1.0"
huggingface-hub = "^0.26.2"
sentencepiece = "*"
# for permutations
pot = "^0.9.5"
ml-collections = "^0.1.1"
tabulate = "^0.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
